<resources>
    <string name="app_name">Let’s Gro</string>

    <string name="android">Android</string>
    <string name="alert">Alert</string>
    <string name="strOk">OK</string>
    <string name="strCancel">Cancel</string>
    <string name="str_loading">Loading…</string>
    <string name="try_again_">Try Again</string>

    <!--camera Permission-->
    <string name="package_uri">package</string>
    <string name="camera_permission_message">Please allow to access Camera to capture photo</string>
    <string name="storage_permission_message">Please allow to access Phone storage.</string>

    <string name="please_select_media">Please select media</string>
    <string name="str_select_from">Select from</string>
    <string name="strCamera">Camera</string>
    <string name="strGallary">Gallary</string>
    <string name="strRemovePhoto">Remove photo</string>
    <string name="strDocuments">Documents</string>
    <string name="reset">Reset</string>
    <string name="crop">Crop</string>
    <string name="close">Close</string>
    <string name="search">search</string>
    <string name="lets">Let’s</string>
    <string name="gro">GRO</string>
    <string name="register">Register</string>
    <string name="Register_as">Register as</string>
    <string name="signup_here">Register Here</string>
    <string name="have_an_account">Don’t have an account?</string>
    <string name="login_with">or login with</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New Password</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="change_password">Change Password</string>
    <string name="profile_first_message">Please complete your profile to continue. \n This will help to suggest best suitable course for you.</string>
    <string name="no_sections">No sections</string>
    <string name="no_more_sections">No more sections</string>
    <string name="course_details_unavailable">Course details are not available yet!</string>
    <string name="getting_course_details">Getting course details…</string>
    <string name="no_content_uploaded">No content has been uploaded yet!</string>

    <string name="notifications_channel_name">Notifications</string>
    <string name="notifications_channel_no_sound">No sound</string>
    <string name="notifications_admin_channel_description">Notifications sent from the app admin</string>
    <string name="error_occured_while_getting_profile">Some error occurred while getting your profile. Try again after sometime.</string>
    <string name="unable_to_fetch_dependencie">Unable to fetch some dependencies. Kindly contact support!</string>
    <string name="no_profile_data_found">No profile data found</string>
    <string name="invalid_city_selected">Invalid city selected</string>

    <!--Login with Classrooom plus START-->
    <string name="join_with_classroom">Join with Classroom</string>
    <string name="email_user_name">Email Id/Username</string>
    <string name="have_account_on_lets_gro">Do you have account on Lets gro?</string>
    <string name="want_to_create_an_account">Do you want to create an account?</string>
    <!--Login with Classrooom plus START-->

    <!-- Rahul Garg
        Payment START
       1 feb, 2021 -->
    <string name="safe_payment_net_banking">Safe payment online. Only Net Banking allowed.</string>
    <string name="safe_money_transfer">Safe money transfer using your bank account. Credit / Debit Card, Net Banking and
        Wallets.
    </string>
    <string name="by_paying_you_accept_to_the_terms_and_conditions">By Paying You Accept to the Terms and Conditions</string>
    <string name="proceed_to_pay">Proceed to Pay</string>
    <string name="view_invoice">View Invoice</string>
    <string name="lbl_continue">Continue</string>
    <string name="fees_amount">Fees Amount</string>

    <string name="select_payment_gateway">Kindly select the payment gateway</string>

    <string name="payment_successful_message">Your Payment amount %1$s was successful. Please click on "Continue" to proceed.</string>
    <string name="payment_fail_message">Your Payment amount %1$s was fail. Please "Try Again" later.</string>
    <string name="rupee_symbol">\u20B9 </string>
    <string name="payment_successful">Payment successful</string>
    <string name="payment_fail">Payment failed</string>

    <string name="payU_salt_debug">65GdodrX</string>
    <string name="payU_salt_release">DuK6IJVP</string>
    <string name="payU_merchant_key_debug">YqFhqG</string>
    <string name="payU_merchant_key_release">x4nEGM</string>

    <string name="airpay_username_debug">5168160</string>
    <string name="airpay_username_release">9411006</string>
    <string name="airpay_password_debug">NBTh6GXx</string>
    <string name="airpay_password_release">2VbRwsYk</string>
    <string name="airpay_merchant_key_debug">24324</string>
    <string name="airpay_merchant_key_release">26907</string>
    <string name="airpay_secret_key_debug">KVnqNAjbh8wKE6wM</string>
    <string name="airpay_secret_key_release">UxvB7wBe8b739A4p</string>

    <string name="admission_form_transaction_custom_message">ADMISSION FORM %1$s %2$s</string>

    <!-- Rahul Garg
    Payment STOP
    -->
</resources>
