<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="changePasswordViewModel"
            type="com.ramanbyte.emla.view_model.ChangePasswordViewModel" />

        <import type="com.ramanbyte.utilities.StaticHelpersKt" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivChangePasswordElement"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_150"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_25"
            android:layout_marginEnd="@dimen/dp_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/login_element" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilOldPassword"
            style="@style/TextInputLayoutWithoutBorder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_22"
            android:hint="@string/old_password"
            app:endIconMode="password_toggle"
            app:errorIconDrawable="@null"
            app:errorText="@{changePasswordViewModel.changeValidator.getValidation(StaticHelpersKt.KEY_OLD_PASSWORD)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivChangePasswordElement">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etOldPassword"
                style="@style/EditTextRegularGrayHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTransparent"
                android:drawablePadding="@dimen/dp_5"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLength="50"
                android:singleLine="true"
                android:text="@={changePasswordViewModel.changePasswordModelLiveData.oldPassword}"
                android:textSize="@dimen/sp_16"
                app:endIconMode="password_toggle"
                app:hintAnimationEnabled="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNewPassword"
            style="@style/TextInputLayoutWithoutBorder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_22"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_22"
            android:hint="@string/new_password"
            app:endIconMode="password_toggle"
            app:errorIconDrawable="@null"
            app:errorText="@{changePasswordViewModel.changeValidator.getValidation(StaticHelpersKt.keyPassword)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilOldPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNewPassword"
                style="@style/EditTextRegularGrayHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTransparent"
                android:drawablePadding="@dimen/dp_5"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="30"
                android:singleLine="true"
                android:text="@={changePasswordViewModel.changePasswordModelLiveData.password}"
                android:textSize="@dimen/sp_16"
                app:hintAnimationEnabled="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRepeatNewPassword"
            style="@style/TextInputLayoutWithoutBorder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_22"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_22"
            android:hint="@string/repeat_new_password"
            app:endIconMode="password_toggle"
            app:errorIconDrawable="@null"
            app:errorText="@{changePasswordViewModel.changeValidator.getValidation(StaticHelpersKt.KEY_NEW_PASSWORD)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilNewPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRepeatNewPassword"
                style="@style/EditTextRegularGrayHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTransparent"
                android:drawablePadding="@dimen/dp_5"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="30"
                android:singleLine="true"
                android:text="@={changePasswordViewModel.changePasswordModelLiveData.newPassword}"
                android:textSize="@dimen/sp_16"
                app:hintAnimationEnabled="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            style="@style/CustomCapsuleButtonGradientBgWhiteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:includeFontPadding="false"
            android:paddingStart="@dimen/dp_20"
            android:paddingTop="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_20"
            android:paddingBottom="@dimen/dp_10"
            android:text="@string/change_password"
            android:onClick="@{changePasswordViewModel::changePasswordClick}"
            android:textAllCaps="true"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="@+id/tilRepeatNewPassword"
            app:layout_constraintStart_toStartOf="@+id/tilRepeatNewPassword"
            app:layout_constraintTop_toBottomOf="@+id/tilRepeatNewPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>